<resources>
    <string name="app_name">Compass</string>

    <string name="all_data_deleted">All data deleted</string>
    <string name="all_data_saved">All data saved</string>
    <string name="column_dots">Column:</string>
    <string name="columns_dots">Columns:</string>
    <string name="compass_data">Compass Data</string>
    <string name="confirm_delete">are you sure you want to delete %s?</string>
    <string name="confirm_delete_data">are you sure you want to delete all data?</string>
    <string name="csv_send_subject">Compass data in CSV format</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="error_columns_empty">Number of columns is empty</string>
    <string name="error_grid_empty">Grid name is empty</string>
    <string name="error_grid_exits">Grid name already exists</string>
    <string name="error_path_empty">Path name is empty</string>
    <string name="error_path_exits">Path name already exists</string>
    <string name="error_rows_empty">Number of rows is empty</string>
    <string name="error_saving_cvs">Unable to write CSV file</string>
    <string name="error_write_permissions">Application has no permission to write in SD card, unable to send data</string>
    <string name="explain_write_permissions">This application needs write access to SD card in order to write temporally CVS file. Without this permission data will not be exported. Are you sure you want to deny dis permission? </string>
    <string name="grid">grid</string>
    <string name="grid_name">Grid Name</string>
    <string name="hertz_abbreviation">Hz</string>
    <string name="name">NAME</string>
    <string name="next">Next</string>
    <string name="no_send_activity">No app configured to send data</string>
    <string name="number_columns">number or columns</string>
    <string name="number_rows">number or rows</string>
    <string name="path">path</string>
    <string name="path_name">Path Name</string>
    <string name="preview">Preview</string>
    <string name="record_accelerometer">Record accelerometer</string>
    <string name="record_global_reference">Global reference</string>
    <string name="record_grid">Record grid</string>
    <string name="record_gyroscope">Record gyroscope</string>
    <string name="record_path">Record path</string>
    <string name="response_retry">TRY AGAIN</string>
    <string name="response_sure">I\'M SURE</string>
    <string name="row_dots">Row:</string>
    <string name="rows_dots">Rows:</string>
    <string name="samples_dots">Samples:</string>
    <string name="sampling_rate_cell_dots">Sampling time per cell:</string>
    <string name="sampling_rate_dots">Sampling rate:</string>
    <string name="seconds_abbreviation">s</string>
    <string name="send_data">Send data</string>
    <string name="send_wait">Please, wait until all data is sent...</string>
    <string name="time_dots">Time:</string>
    <string name="title_activity_grid_recording">Grid Recording</string>
    <string name="title_activity_grid_settings">Grid Settings</string>
    <string name="title_activity_path_recording">Path Recording</string>
    <string name="title_activity_path_settings">Path Settings</string>
    <string name="title_activity_save">Saving data</string>
    <string name="title_activity_sendig">Sending data</string>
    <string name="title_activity_view_recordings">Recordings list</string>
    <string name="type">TYPE</string>
    <string name="view_data">View data</string>
    <string name="wait_saving_data">Procesing data to export</string>
</resources>
