<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.uoc.compass.GridSettingsActivity">

    <EditText
        android:id="@+id/grid_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/grid_name"
        android:ems="10"/>
    <TextView
        android:id="@+id/grid_freq_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampling_rate_dots"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/grid_freq_seek"
        android:max="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/grid_time_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampling_rate_cell_dots"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/grid_time_seek"
        android:max="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rows_dots"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/grid_rows_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            android:hint="@string/number_rows"
            android:ems="10"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/columns_dots"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/grid_columns_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            android:hint="@string/number_columns"
            android:ems="10"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/grid_record_accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/record_accelerometer"/>

    <CheckBox
        android:id="@+id/grid_record_gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_gyroscope"/>

    <CheckBox
        android:id="@+id/grid_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/preview"/>

    <Button
        android:id="@+id/grid_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"/>
</LinearLayout>