<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.uoc.compass.PathSettingsActivity">
    <EditText
        android:id="@+id/path_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/path_name"
        android:ems="10"/>
    <TextView
        android:id="@+id/path_freq_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampling_rate_dots"
        android:textSize="20sp" />
    <SeekBar
        android:id="@+id/path_freq_seek"
        android:max="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/path_record_global_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/record_global_reference"/>
    <CheckBox
        android:id="@+id/path_record_accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/record_accelerometer"/>

    <CheckBox
        android:id="@+id/path_record_gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/record_gyroscope"/>

    <CheckBox
        android:id="@+id/path_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/preview"/>

    <Button
        android:id="@+id/path_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"/>
</LinearLayout>
