<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uoc.compass.MainActivity"
   >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/compass"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/record_path_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_path"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_timeline_black_36dp"
        android:onClick="onClick"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/record_grid_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/record_grid"
        android:drawableLeft="@drawable/ic_border_all_black_36dp"
        android:onClick="onClick"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/view_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_data"
        android:drawableLeft="@drawable/ic_folder_black_36dp"
        android:onClick="onClick"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/send_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_data"
        android:drawableLeft="@drawable/ic_mail_black_36dp"
        android:onClick="onClick"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/delete_all_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_all_data"
        android:drawableLeft="@drawable/ic_delete_black_36dp"
        android:onClick="onClick"
        android:layout_centerHorizontal="true" />
</LinearLayout>